# agent-framework-travel-assistant

./: .env.example  .gitignore  DEVCONTAINER.md  Dockerfile  Makefile  README.md  REMAINING_PLAN.md  agent.py  config.py  gradio_app.py  how-it-works.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
assets/: styles.css
context/: __init__.py  seed.json
infra/: main.bicep  resources.bicep
utils/: azure_foundry_search.py  azure_search.py  ui_events.py
